# native-activity

./: .gitignore  README.md  android.jks  cubes引用列表.xmind  entry_android的包含关系.xmind
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
